# trim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  audio_example.txt  build.bat  build.sh  buildD.sh  build_deps.sh  common_structs.h  compile_commands.json  configure.sh  configure_debug.sh  configure_mac.sh  glad.c  gui.cpp  gui.h  helpers.h  imgui.ini  main.cpp  range_slider.h  run.bat  run.sh  rund.sh  trim.h  video_operations.cpp  video_operations.h
.cache/clangd/index/: _fixes.hpp.4F71E3974548E3CA.idx  _vectorize.hpp.C1878A762FD08E5A.idx  cocoa_init.m.5164287B3E8850E1.idx  cocoa_joystick.h.3F16D8239245AF90.idx  cocoa_joystick.m.B073A95AC394DB7F.idx  cocoa_monitor.m.0A18937A54042A8D.idx  cocoa_platform.h.BC3B15753F31F3A1.idx  cocoa_time.c.E8B9CC3ACCC8D2AE.idx  cocoa_time.h.F8FB9950162B53E2.idx  cocoa_window.m.6473B08242C3897D.idx  common.hpp.9A4710BEBCDDF966.idx  compute_common.hpp.87EE7DC746AF0B05.idx  compute_vector_decl.hpp.2C0FE59D2881C756.idx  compute_vector_relational.hpp.21A65E774E858177.idx  context.c.C5CEB36300134AD5.idx  egl_context.c.22946A1EE878992F.idx  exponential.hpp.8D3FB5CB60460FB4.idx  func_common.inl.57D0FF859D378FEC.idx  func_exponential.inl.651DD42C45DB8211.idx  func_geometric.inl.C469CBF81781E903.idx  func_integer.inl.449EB14704236B87.idx  func_matrix.inl.FB377D908B2622FE.idx  func_packing.inl.E30477D64F00E156.idx  func_trigonometric.inl.7E9D6F58335BC45C.idx  func_vector_relational.inl.83274E07C96B2604.idx  fwd.hpp.F08F2522EDE67531.idx  geometric.hpp.F8DA52D568CE5B80.idx  glad.c.38B242187311C63E.idx  glad.h.B7FE620B820E6728.idx  glfw3.h.1536C16F43E1EBBD.idx  glfw3native.h.55C61DA7D0B5BB54.idx  glm.hpp.B03E7B20B478F7FB.idx  gui.cpp.35D3F72B5824E034.idx  gui.h.F9F6A57C83660A69.idx  imconfig.h.B687AA0A38CE3A15.idx  imgui.cpp.EDB0422D4365B5FF.idx  imgui.h.A572CBC2BF75B821.idx  imgui_demo.cpp.3172732DA0C327FF.idx  imgui_draw.cpp.59A6435AA8D018BF.idx  imgui_impl_glfw.cpp.CF234E1FAB773F69.idx  (+151 more)
lib/FFMpeg/: CMakeLists.txt
lib/FFMpeg/PlatformLinux/ffmpeg_shared_linux/include/libavutil/: ffversion.h
lib/FFMpeg/PlatformLinux/ffmpeg_shared_linux/lib/: libavutil.so.59  libpostproc.so.58.4.100  libswresample.so.5.4.100  libswscale.so.8.13.100
lib/FFMpeg/PlatformLinux/ffmpeg_shared_linux/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
src/: common_structs.h  gl_helpers.h  gl_includes.h  gui.cpp  gui.h  helpers.h  image_loader.cpp  image_loader.h  main.cpp  openAL.h  range_slider.h  trim.h  video_operations.cpp  video_operations.h
xbuild/: CMakeCache.txt  cmake_install.cmake
xbuild/CMakeScripts/: ReRunCMake.make
xbuild/Debug/: trim
xbuild/trim.xcodeproj/: project.pbxproj
xbuild/trim.xcodeproj/project.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
xbuild/trim.xcodeproj/xcshareddata/xcschemes/: trim.xcscheme
xbuild/trim.xcodeproj/xcuserdata/user.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xbuild/trim.xcodeproj/xcuserdata/user.xcuserdatad/xcschemes/: xcschememanagement.plist
